# docxify

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/docxify/: __init__.py  __main__.py  batch.py  cli.py  config.py  converter.py  extractor.py  markdown_parser.py  styles.py
tests/: conftest.py  test_batch.py  test_converter.py  test_extractor.py  test_styles.py
tests/fixtures/: sample.md
